fix expand animation on firefox

--- a/css/classPage.css
+++ b/css/classPage.css
@@ -10,6 +10,7 @@
 }
 
 .tableWrapper > table {
+    display: grid;
     overflow: hidden;
 }
 
